@@ -2,6 +2,7 @@
 
 	* init.el: Add copyright update and some mode setting tweaks from
 	tromey.
+	Silence some IRC noise.
 
 2009-08-31  Anthony Green  <green@moxielogic.com>
 
